--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -17,8 +17,9 @@ ext{
     rxJavaVersion = '1.0.14'
     rxAndroidVersion = '1.0.1'
     butterKnifeVersion = '7.0.1'
-
-
+    retrofitVersion = '2.0.1'
+    retrofitConverterGsonVersion = '2.0.1'
+    retrofitCallAdapterVersion = '2.0.1'
     // Development
     leakCanaryVersion = '1.3.1'
 
@@ -41,6 +42,10 @@ ext{
         daggerCompiler:     "com.google.dagger:dagger-compiler:${daggerVersion}",
         dagger:             "com.google.dagger:dagger:${daggerVersion}",
         javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
+        retrofit: "com.squareup.retrofit2:retrofit:${retrofitVersion}",
+        retrofitConverterGson: "com.squareup.retrofit2:converter-gson:${retrofitConverterGsonVersion}",
+        retrofitCallAdapter: "com.squareup.retrofit2:adapter-rxjava:${retrofitCallAdapterVersion}"
+
     ]
 
     developmentDependencies = [
