--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -20,6 +20,9 @@ ext{
     retrofitVersion = '2.0.1'
     retrofitConverterGsonVersion = '2.0.1'
     retrofitCallAdapterVersion = '2.0.1'
+    greendaoVersion = '2.1.0'
+    okhttp3LoggingInterceptorVersion = '3.2.0'
+
     // Development
     leakCanaryVersion = '1.3.1'
 
@@ -39,13 +42,14 @@ ext{
     ]
 
     dataDependencies = [
-        daggerCompiler:     "com.google.dagger:dagger-compiler:${daggerVersion}",
-        dagger:             "com.google.dagger:dagger:${daggerVersion}",
-        javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
-        retrofit: "com.squareup.retrofit2:retrofit:${retrofitVersion}",
-        retrofitConverterGson: "com.squareup.retrofit2:converter-gson:${retrofitConverterGsonVersion}",
-        retrofitCallAdapter: "com.squareup.retrofit2:adapter-rxjava:${retrofitCallAdapterVersion}"
-
+        daggerCompiler:         "com.google.dagger:dagger-compiler:${daggerVersion}",
+        dagger:                 "com.google.dagger:dagger:${daggerVersion}",
+        javaxAnnotation:        "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
+        retrofit:               "com.squareup.retrofit2:retrofit:${retrofitVersion}",
+        retrofitConverterGson:  "com.squareup.retrofit2:converter-gson:${retrofitConverterGsonVersion}",
+        retrofitCallAdapter:    "com.squareup.retrofit2:adapter-rxjava:${retrofitCallAdapterVersion}",
+        greendao:               "de.greenrobot:greendao:${greendaoVersion}",
+        okhttp3LoggingInterceptor: "com.squareup.okhttp3:logging-interceptor:${okhttp3LoggingInterceptorVersion}"
     ]
 
     developmentDependencies = [
