--- a/data/build.gradle
+++ b/data/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     compile dataDependencies.retrofit
     compile dataDependencies.retrofitConverterGson
     compile dataDependencies.retrofitCallAdapter
-    compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
+    compile dataDependencies.greendao
+    compile dataDependencies.okhttp3LoggingInterceptor
 
 }
