--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,12 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 android {
     def globalConfiguration = rootProject.extensions.getByName("ext")
 
@@ -40,6 +46,8 @@ dependencies {
     compile project(':data')
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+
+    compile (name:'wishlist09-debug', ext:'aar')
     compile 'com.android.support:appcompat-v7:24.0.0-alpha1'
     compile 'com.android.support:support-v4:23.3.0'
     compile 'com.android.support:design:23.3.0'
