--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pccw.lizhihui.cmcc">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:name=".AndroidApplication"
         android:allowBackup="true"
@@ -10,18 +12,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.activity.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar" >
+        <activity android:name=".view.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.activity.LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".view.activity.ContainerActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".view.activity.LoginActivity" />
+        <activity android:name=".view.activity.ContainerActivity" />
     </application>
 
 </manifest>
